JumpScript/tests/baselines/reference/classWithPredefinedTypesAsNames2.errors.txt
tests/cases/conformance/classes/classDeclarations/classWithPredefinedTypesAsNames2.jump(3,7): error TS1005: '{' expected.


==== tests/cases/conformance/classes/classDeclarations/classWithPredefinedTypesAsNames2.jump (1 errors) ====
    // classes cannot use predefined types as names
    
    class void {}
          ~~~~
!!! error TS1005: '{' expected.